# mediarepo

./: .containerignore  .deepsource.toml  .dockerignore  .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  Dockerfile  Gemfile  Makefile  README.md  _config.yml  about.markdown  build.py  docs.html  index.html  index.markdown  index.md  posts.html
_docs/: 10_installation.md  20_repositories.md  30_adding_files.md  40_tagging.md  50_repo_configuration.md  50_searching.md  60_sorting.md  90_repo_configuration.md  doc1.md  doc2.md
_includes/: footer.html  head.html  previous-next.html  previous-next_docs.html
_layouts/: doc.html  home.html  post.html
mediarepo-api/: Cargo.toml  README.md
mediarepo-api/.github/workflows/: build.yml
mediarepo-api/.helix/: languages.toml
mediarepo-api/src/: lib.rs
mediarepo-api/src/client_api/: error.rs  file.rs  job.rs  mod.rs  preset.rs  protocol.rs  repo.rs  tag.rs
mediarepo-api/src/daemon_management/: cli.rs  error.rs  mod.rs
mediarepo-api/src/tauri_plugin/: background_tasks.rs  custom_schemes.rs  error.rs  mod.rs  settings.rs  state.rs  utils.rs
mediarepo-api/src/tauri_plugin/commands/: daemon.rs  file.rs  job.rs  mod.rs  preset.rs  repo.rs  tag.rs
mediarepo-api/src/test/: mod.rs  test_type_serialization.rs
mediarepo-api/src/types/: files.rs  filtering.rs  identifier.rs  jobs.rs  misc.rs  mod.rs  repo.rs  tags.rs
mediarepo-daemon/: .gitignore  Cargo.toml  Makefile  README.md
mediarepo-daemon/.github/workflows/: build.yml
mediarepo-daemon/logs/: db_traces.logs
mediarepo-daemon/mediarepo-core/: Cargo.toml
mediarepo-daemon/mediarepo-core/src/: content_descriptor.rs  context.rs  error.rs  file_hash_store.rs  image_processing.rs  lib.rs  settings.rs  tracing_layer_list.rs  traits.rs  type_keys.rs  type_list.rs  utils.rs
mediarepo-daemon/mediarepo-core/src/fs/: drop_file.rs  file_hash_store.rs  mod.rs  thumbnail_store.rs
mediarepo-daemon/mediarepo-core/src/settings/: logging.rs  mod.rs  paths.rs  server.rs  v1.rs
mediarepo-daemon/mediarepo-database/: Cargo.toml
mediarepo-daemon/mediarepo-database/migration/: Cargo.toml
mediarepo-daemon/mediarepo-database/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220611_122851_tag_implications.rs  main.rs  utils.rs
mediarepo-daemon/mediarepo-database/migrations/: 20210930165547_initial-schema.sql  20210930182448_rename-type-column.sql  20211011181015_add-file-mime-column.sql  20211012165523_add-thumbnails.sql  20211014184628_add-mime-to-thumbnail.sql  20211017141828_make-hashes-unique.sql  20211017145013_change-uniqueness-of-tags.sql  20211023154616_add-more-indices.sql  20211116200116_remove-thumbnail-table.sql  20211116200356_add-file-size-column.sql  20220105184216_add-file-status.sql  20220109142029_remove-storages.sql  20220205092929_add-sorting-preset-tables.sql  20220205165133_fix-uniqueness-of-sorting-preset-keys.sql  20220225183244_add-jobs-tables.sql
mediarepo-daemon/mediarepo-database/src/: database.rs  lib.rs
mediarepo-daemon/mediarepo-database/src/entities/: content_descriptor.rs  content_descriptor_source.rs  content_descriptor_tag.rs  file.rs  file_metadata.rs  hash.rs  hash_source.rs  hash_tag.rs  job.rs  job_state.rs  mod.rs  namespace.rs  sort_key.rs  sorting_preset.rs  sorting_preset_key.rs  source.rs  storage.rs  tag.rs  tag_implication.rs  thumbnail.rs
mediarepo-daemon/mediarepo-database/src/queries/: analysis.rs  mod.rs  tags.rs
mediarepo-daemon/mediarepo-logic/: Cargo.toml
mediarepo-daemon/mediarepo-logic/src/: content_descriptor.rs  lib.rs  namespace.rs  tag.rs  type_keys.rs
mediarepo-daemon/mediarepo-logic/src/dao/: mod.rs
mediarepo-daemon/mediarepo-logic/src/dao/file/: add.rs  delete.rs  find.rs  mod.rs  update.rs
mediarepo-daemon/mediarepo-logic/src/dao/job/: generate_missing_thumbnails.rs  migrate_content_descriptors.rs  mod.rs  sqlite_operations.rs  state.rs
mediarepo-daemon/mediarepo-logic/src/dao/repo/: mod.rs
mediarepo-daemon/mediarepo-logic/src/dao/sorting_preset/: add.rs  mod.rs
mediarepo-daemon/mediarepo-logic/src/dao/tag/: add.rs  add_implications.rs  all_for_cds_map.rs  by_name.rs  cdids_with_namespaced_tags.rs  delete_implications.rs  mappings.rs  mod.rs
mediarepo-daemon/mediarepo-logic/src/dto/: file.rs  file_metadata.rs  job.rs  job_state.rs  mod.rs  namespace.rs  sorting_preset.rs  tag.rs  thumbnail.rs
mediarepo-daemon/mediarepo-logic/src/file/: mod.rs
mediarepo-daemon/mediarepo-model/: Cargo.toml
mediarepo-daemon/mediarepo-model/src/: content_descriptor.rs  file.rs  file_metadata.rs  file_type.rs  hash.rs  lib.rs  namespace.rs  repo.rs  storage.rs  tag.rs  thumbnail.rs  type_keys.rs
mediarepo-daemon/mediarepo-model/src/file/: filter.rs  mod.rs
mediarepo-daemon/mediarepo-model/src/handles/: mod.rs  tag_handle.rs
mediarepo-daemon/mediarepo-model/src/models/: file.rs  mod.rs  storage.rs
mediarepo-daemon/mediarepo-socket/: Cargo.toml
mediarepo-daemon/mediarepo-socket/src/: from_model.rs  lib.rs  utils.rs
mediarepo-daemon/mediarepo-socket/src/namespaces/: files.rs  jobs.rs  mod.rs  presets.rs  repo.rs  tags.rs
mediarepo-daemon/mediarepo-socket/src/namespaces/files/: mod.rs  searching.rs  sorting.rs
mediarepo-daemon/mediarepo-socket/src/types/: file_response.rs  mod.rs  requests.rs  responses.rs
mediarepo-daemon/mediarepo-worker/: Cargo.toml
mediarepo-daemon/mediarepo-worker/src/: execution_state.rs  handle.rs  job_dispatcher.rs  jobs_table.rs  lib.rs  progress.rs  scheduler.rs  state_data.rs  status_utils.rs
mediarepo-daemon/mediarepo-worker/src/jobs/: calculate_sizes.rs  check_integrity.rs  generate_missing_thumbnails.rs  migrate_content_descriptors.rs  mod.rs  vacuum.rs
mediarepo-daemon/src/: constants.rs  lib.rs  logging.rs  main.rs  utils.rs
mediarepo-ui/src-tauri/: Cargo.toml  tauri.conf.json
mediarepo-ui/src-tauri/icons/: icon.icns
mediarepo-ui/src-tauri/src/: context.rs  error.rs  main.rs  settings.rs
mediarepo-ui/src-tauri/src/commands/: files.rs  mod.rs  repo.rs  tags.rs
mediarepo-ui/src-tauri/src/ipc/: files.rs  mod.rs
(+607 files in other folders)
