[package]
name = "mediarepo-api"
version = "0.32.1"
edition = "2018"
license = "gpl-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.32"
thiserror = "1.0.30"
async-trait = { version = "0.1.53", optional = true }
parking_lot = { version = "0.12.0", optional = true }
serde_json = { version = "1.0.79", optional = true }
directories = { version = "4.0.1", optional = true }
mime_guess = { version = "2.0.4", optional = true }
serde_piecewise_default = "0.2.0"
futures = { version = "0.3.21", optional = true }
url = { version = "2.2.2", optional = true }
pathsearch = { version = "0.2.0", optional = true }

[dependencies.bromine]
version = "0.20.1"
optional = true
features = ["serialize_bincode", "encryption_layer"]

[dependencies.serde]
version = "1.0.136"
features = ["serde_derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.tauri]
version = "1.0.0-rc.4"
optional = true
default-features = false
features = []

[dependencies.tokio]
version = "1.17.0"
optional = true
features = ["sync", "fs", "net", "io-util", "io-std", "time", "rt", "process"]

[dependencies.toml]
version = "0.5.8"
optional = true

[features]
tauri-plugin = ["client-api","tauri", "parking_lot", "serde_json", "tokio", "toml", "directories", "mime_guess", "futures", "url"]
client-api = ["bromine", "async-trait", "tokio", "pathsearch"]
