[package]
name = "mediarepo-core"
version = "0.1.0"
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^1.0.30"
multihash = "^0.15.0"
multibase = "^0.9.1"
base64 = "^0.13.0"
toml = "^0.5.8"
serde = "^1.0.132"
typemap_rev = "^0.1.5"
futures = "^0.3.19"
itertools = "^0.10.3"
glob = "^0.3.0"
tracing = "^0.1.29"
data-encoding = "^2.3.2"
tokio-graceful-shutdown = "^0.4.3"

[dependencies.thumbnailer]
version = "^0.2.4"
default-features = false

[dependencies.sea-orm]
version = "^0.5.0-rc.1"
default-features = false

[dependencies.sqlx]
version = "^0.5.9"
default-features = false
features = ["migrate"]

[dependencies.tokio]
version = "^1.15.0"
features = ["fs", "io-util", "io-std"]

[dependencies.config]
version = "^0.11.0"
features = ["toml"]

[dependencies.mediarepo-api]
git = "https://github.com/Trivernis/mediarepo-api.git"
rev = "06d51ed147c4f65361f8351c30e3417ffd457f0c"
features = ["bromine"]

[features]
default = []
ffmpeg = ["thumbnailer/ffmpeg"]