[package]
name = "mediarepo-core"
version = "0.1.0"
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
multihash = "0.16.1"
multibase = "0.9.1"
base64 = "0.13.0"
toml = "0.5.8"
serde = "1.0.136"
futures = "0.3.21"
itertools = "0.10.3"
glob = "0.3.0"
tracing = "0.1.32"
data-encoding = "2.3.2"
tokio-graceful-shutdown = "0.5.0"
thumbnailer = "0.4.0"
bincode = "1.3.3"
tracing-subscriber = "0.3.9"
trait-bound-typemap = "0.3.3"

[dependencies.sea-orm]
version = "0.7.1"
default-features = false

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = ["migrate"]

[dependencies.tokio]
version = "1.17.0"
features = ["fs", "io-util", "io-std"]

[dependencies.config]
version = "0.12.0"
features = ["toml"]

[dependencies.mediarepo-api]
path = "../../mediarepo-api"
features = ["bromine"]
