[package]
name = "mediarepo-core"
version = "0.1.0"
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
multihash = "0.16.2"
multibase = "0.9.1"
base64 = "0.13.0"
toml = "0.5.9"
serde = "1.0.137"
futures = "0.3.21"
itertools = "0.10.3"
glob = "0.3.0"
tracing = "0.1.34"
data-encoding = "2.3.2"
tokio-graceful-shutdown = "0.7.0"
thumbnailer = "0.4.0"
bincode = "1.3.3"
tracing-subscriber = "0.3.11"
trait-bound-typemap = "0.3.3"

[dependencies.sea-orm]
version = "0.8.0"
default-features = false

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = ["migrate"]

[dependencies.tokio]
version = "1.18.1"
features = ["fs", "io-util", "io-std"]

[dependencies.config]
version = "0.13.1"
features = ["toml"]

[dependencies.mediarepo-api]
path = "../../mediarepo-api"
features = ["bromine"]
