[package]
name = "mediarepo-database"
version = "0.2.0"
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
tracing = "0.1.32"

[dependencies.mediarepo-core]
path = "../mediarepo-core"

[dependencies.sqlx]
version = "0.5.11"
features = ["migrate"]

[dependencies.sea-orm]
version = "0.7.1"
features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"]
default-features = false
