[package]
name = "mediarepo-model"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
typemap_rev = "0.1.5"
serde = "1.0.130"
mime_guess = "2.0.3"
mime = "0.3.16"
tracing = "0.1.29"

[dependencies.mediarepo-core]
path = "../mediarepo-core"

[dependencies.mediarepo-database]
path = "../mediarepo-database"

[dependencies.sea-orm]
version = "0.2.3"
features = ["runtime-tokio-native-tls", "macros"]
default-features = false

[dependencies.tokio]
version = "1.12.0"
features = ["fs", "io-std", "io-util"]