[package]
name = "mediarepo-socket"
version = "0.1.0"
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
tracing = "0.1.33"
compare = "0.1.0"
port_check = "0.1.5"
rayon = "1.5.2"

[dependencies.mediarepo-core]
path = "../mediarepo-core"

[dependencies.mediarepo-database]
path = "../mediarepo-database"

[dependencies.mediarepo-logic]
path = "../mediarepo-logic"

[dependencies.mediarepo-worker]
path = "../mediarepo-worker"

[dependencies.tokio]
version = "1.17.0"
features = ["net"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.tracing-futures]
version = "0.2.5"
features = ["tokio-executor"]
