[package]
name = "mediarepo-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
tracing = "0.1.35"

[dependencies.mediarepo-core]
path = "../mediarepo-core"

[dependencies.mediarepo-logic]
path = "../mediarepo-logic"

[dependencies.mediarepo-database]
path = "../mediarepo-database"

[dependencies.tokio]
version = "1.19.2"
features = ["macros"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]
