[package]
name = "app"
version = "1.0.0-rc.2"
description = "The UI for the mediarepo media management tool"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4", features = [] }

[dependencies]
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
typemap_rev = "0.1.5"

[dependencies.tauri]
version = "1.0.0-beta.8"
features = ["dialog-all", "path-all", "shell-all"]

[dependencies.tracing-subscriber]
version = "0.3.8"
features = ["env-filter"]

[dependencies.mediarepo-api]
path = "../../mediarepo-api"
features = ["tauri-plugin"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
