[package]
name = "app"
version = "1.0.4"
description = "The UI for the mediarepo media management tool"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dependencies]
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
typemap_rev = "0.1.5"

[dependencies.tauri]
version = "1.0.0-rc.9"
features = ["dialog-all", "path-all", "shell-all"]

[dependencies.tracing-subscriber]
version = "0.3.11"
features = ["env-filter"]

[dependencies.mediarepo-api]
path = "../../mediarepo-api"
features = ["tauri-plugin"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
