[package]
name = "app"
version = "1.0.5"
description = "The UI for the mediarepo media management tool"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
typemap_rev = "0.1.5"

[dependencies.tauri]
version = "1.5.4"
features = ["dialog-all", "path-all", "shell-all"]

[dependencies.tracing-subscriber]
version = "0.3.9"
features = ["env-filter"]

[dependencies.mediarepo-api]
path = "../../mediarepo-api"
features = ["tauri-plugin"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
